
  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-423 HCatalog should include SerDe-reported fields in the table schema (traviscrawford via khorgath)

  HCAT-362 add --local-infile to the mysql command (arpitgupta via daijy)

  HCAT-417 List Ant 1.8 in install pre-reqs (jghoman via daijy)

  HCAT-422 missing guava lib in trunk build causes unit test failures

  HCAT-406 The "toString" method in HCatFieldSchema class return only type information. (avandana)

  HCAT-421 Unit test failures in trunk build (avandana)

  HCAT-411 Incorrect example provided in the HCatalog documentation (Overview page) avandana

  HCAT-355 Include 1.1.0 version of hadoop as test dependency to fix random test failures in build (rohini via avandana)

  HCAT-409 MultiOutputformat should make getJobContext public (rohini via avandana)

  HCAT-403 MultiOutputFormat will call taskCommit on all formats if only one ever needs commit (rohini via avandana)

  HCAT-400 HCatalog build fails from git checkout due to missing lib directory (traviscrawford via gates)

Release 0.4.0 - Release May 16 2012

  INCOMPATIBLE CHANGES
  HCAT-358 Remove externed hive code from HCat code and use maven instead (thw and gates via gates)

  HCAT-359 hcatalog tar.gz should only have hcatalog binaries (gkesavan via gates)

  HCAT-267 rename 64 bit rpm/deb package (gkesavan via gates)

  HCAT-289 InputJobInfo still uses serverUri and serverKerberosPrincipal (khorgath via gates)

  HCAT-295 Rename storage-drivers directory to storage-handlers (gates)

  HCAT-264 Barrier for HCatOutputFormat for Pig/Mapreduce if the table contains feature only supported in Hive (daijy via gates)

  HCAT-279 Remove remaining code mentioning isd/osd (daijy via gates)
